<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg">

    <!-- 扫描结果 -->

    <TextView
        android:id="@+id/text_scan_result"
        style="@style/normalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="2dp"
        android:text="@string/text_result" />

    <ScrollView
        android:id="@+id/scrollView_show_msg"
        android:layout_width="fill_parent"
        android:layout_height="300px"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="1dp"
        android:background="#0f000000"
        android:scrollbarStyle="outsideOverlay" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/edit_show_msg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="13dip"
                android:layout_marginRight="13dip"
                android:background="@null"
                android:clickable="true"
                android:enabled="true"
                android:focusable="false"
                android:gravity="top"
                android:scrollbars="vertical"
                android:singleLine="false"
                android:text=""
                android:textColor="#fff"
                android:textSize="16sp" >
            </EditText>
        </LinearLayout>
    </ScrollView>
    <!-- 功能区 -->

    <Button
        android:id="@+id/btn_playRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/btn_playRecord" />

    <Button
        android:id="@+id/btn_cancelRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/btn_cancelRecord" />




</LinearLayout>